# harness

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  contributing.md  plugin-authoring.md  user-guide.md
plans/: plan.md
plugins/memory/: README.md  hooks.py  plugin.toml  server.py  store.py
scripts/: record_fixtures.py  serve-local.sh
src/harness/: blobs.py  catalog.py  cc_import.py  cli.py  dispatcher.py  errors.py  events.py  fold.py  frontmatter.py  hooks.py  interaction.py  log.py  loop.py  mcp_config.py  mcp_host.py  mcp_import.py  messages.py  mixture.py  native_tools.py  parity.py  permissions.py  plugins.py  provider.py  provider_litellm.py  redaction.py  resume.py  routing.py  session.py  skills.py  subagent.py  telemetry.py  todo.py  tools.py  tui.py  types.py  (+2 more)
tests/: conftest.py  test_blobs.py  test_catalog.py  test_catalog_provider.py  test_cc_import_agents.py  test_cc_import_convert.py  test_cc_import_hooks.py  test_cc_import_mcp.py  test_cc_import_reader.py  test_cc_import_report.py  test_cc_import_skills.py  test_cli.py  test_dispatcher.py  test_e2e.py  test_e2e_phase2.py  test_e2e_phase3.py  test_e2e_phase4.py  test_e2e_phase5.py  test_e2e_phase6.py  test_e2e_phase7.py  test_e2e_phase8.py  test_e2e_phase9.py  test_errors.py  test_events.py  test_fold.py  test_fold_read_paths.py  test_fold_todo.py  test_frontmatter.py  test_hooks.py  test_interaction.py  test_log.py  test_loop.py  test_mcp_config.py  test_mcp_fixture.py  test_mcp_host.py  test_mcp_http.py  test_mcp_import.py  test_memory_plugin.py  test_messages.py  test_mixture.py  (+24 more)
(+7 files in other folders)
