[project]
name = "harness"
version = "0.0.1"
description = "Personal event-sourced multi-model agent harness"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "litellm>=1.84.0",
    "mcp>=1.24,<2",
    "textual>=8.2.7,<9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
harness = "harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
